--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId "com.baijia.demo"
         minSdkVersion 14
         targetSdkVersion 25
-        versionCode 1
+        versionCode 1 我id交房我IEUR骗我IEUR人
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
