--- a/liveplayer-sdk-ui/build.gradle
+++ b/liveplayer-sdk-ui/build.gradle
@@ -44,10 +44,10 @@ dependencies {
     }
     implementation 'com.google.code.gson:gson:2.8.2'
 
-//    api 'com.baijiayun.live:liveplayer-sdk-core:2.0.1'
-    api (project(path: ':liveplayer-sdk-core')){
-        exclude group:"com.android.support"
-    }
+    api 'com.baijiayun.live:liveplayer-sdk-core:2.0.4'
+//    api (project(path: ':liveplayer-sdk-core')){
+//        exclude group:"com.android.support"
+//    }
 }
 android {
     lintOptions {
