--- a/liveplayer-sdk-ui/build.gradle
+++ b/liveplayer-sdk-ui/build.gradle
@@ -35,7 +35,12 @@ dependencies {
     implementation 'io.reactivex:rxjava:1.3.4'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.2'
-    api 'com.baijia.live:liveplayer-sdk-core-ppt:1.4.18'
+
+    api ('com.baijia.live:liveplayer-sdk-core-ppt:1.4.18'){
+        exclude group: 'com.baijia.live', module: 'liveplayer-sdk-core'
+    }
+
+    api 'com.baijia.live:liveplayer-sdk-core:1.4.19-dedao'
 }
 android {
     lintOptions {
