--- a/liveplayer-sdk-ui/gradle.properties
+++ b/liveplayer-sdk-ui/gradle.properties
@@ -2,5 +2,5 @@ POM_NAME=BaijiaLiveplayerSDKUI
 POM_ARTIFACT_ID=liveplayer-sdk-ui
 POM_PACKAGING=aar
 
-VERSION_NAME=2.0.0-rc01
-VERSION_CODE=20190619
+VERSION_NAME=2.0.3
+VERSION_CODE=20191105
